added hover effect

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <div id="container"></div>
+    <button id="clearButton">Clear Effect</button>
+
     <script src="index.js"></script>
   </body>
 </html>
