--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <button id="newGridBtn">New Grid</button>
+
     <div id="container"></div>
     <button id="clearButton">Clear Effect</button>
 
